# SkyLink-Drone-Network-Simulator

./: Cargo.toml  README.md  image.html
inputs/: input.toml  input_3_peat.toml  input_butterfly.toml  input_double_chain_flood.toml  input_flood.toml  input_generic_fragment_forward.toml  input_generic_nack.toml  input_star.toml  input_star_chat.toml  input_star_medias.toml  input_tree.toml
src/: initializer.rs  main.rs  message.rs  network_edge.rs  routing.rs
src/clients_gio/: client_chat.rs  client_command.rs  client_struct.rs  client_type.rs  mod.rs  web_browser.rs
src/clients_sam/: mod.rs  sam_client_base.rs  sam_client_chat_system.rs  sam_client_trait.rs  sam_client_type.rs  sam_events.rs  sam_web_browser_system.rs
src/server/: mod.rs  server_chat.rs  server_command.rs  server_media.rs  server_struct.rs  server_text.rs  server_trait.rs  server_type.rs
src/simulation_control/: mod.rs  sim_control.rs  sim_daniel.rs  storage.rs
src/test/: mod.rs  test_bench.rs  test_drones.rs  test_initializer.rs
src/test/contents_inputs/text_files/: text_list1.txt  text_list2.txt  text_list3.txt  text_list4.txt  text_list5.txt
