[package]
name = "SkyLinksProg"
version = "0.1.0"
edition = "2021"

[dependencies]
# AP main library.
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
# All the imported drones
skylink = { git = "https://github.com/Suge42/Skylink_drone.git" }
d-r-o-n-e_drone = { git = "https://github.com/AP-2024-25-D-R-O-N-E/drone.git"}
fungi_drone = { git = "https://github.com/Fungi-B-D/Fungi-Drone.git" }
wg_2024-rust = { git = "https://github.com/LuigiMiazzo17/unitn-advancedProgramming-WGL_2024-drone.git" }
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }
rolling_drone = { git = "https://github.com/giorebecchi/RollingDrone.git"}
getdroned = { git = "https://github.com/GetDroned/Drone.git", features = ["log"] }
dr_ones = { git = "https://github.com/Dr-Ones/drone" }
rustastic-drone = { git = "https://github.com/Rustastic/RustasticDrone.git" }
rusty_drones = { git = "https://github.com/rusty-drone-2024/rusty-drone.git", branch = "main" }
rust_do_it = { git = "https://github.com/RustDoIt/Drone.git" }
# Other dependencies
toml = "0.8.19"
crossbeam-channel = "0.5.13"
fastrand = "2.2.0"
petgraph = "0.7.1"
egui = "0.29.1"
egui_plot = "0.29.0"
eframe = "0.29.1"
winapi = { version = "0.3", features = ["winuser"] }
image = "0.25.5"
flexi_logger = "0.29.6"
log = "0.4"
serde = "1.0.216"
serde_json = "1.0.134"
base64 = "0.22.1"
open = "5"
rodio = "0.17"


[dev-dependencies]
rusty_tester = { git = "https://github.com/rusty-drone-2024/rusty-tester" }